objects/Maintenance_Item__c.object
<CustomObject>
    <description>to store check list items for maintenance case</description>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>checkoff if maintenance was completed.  leave unchecked if it was not</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Combiner Boxes</fullName>
                </value>
                <value>
                    <fullName>Contractual/Special Requirements</fullName>
                </value>
                <value>
                    <fullName>DAS/Metering Inspection</fullName>
                </value>
                <value>
                    <fullName>Exposed Wireways</fullName>
                </value>
                <value>
                    <fullName>Inverters</fullName>
                </value>
                <value>
                    <fullName>Modules &amp; Mounting</fullName>
                </value>
                <value>
                    <fullName>Roof</fullName>
                </value>
                <value>
                    <fullName>Site Grounds</fullName>
                </value>
                <value>
                    <fullName>Tracker</fullName>
                </value>
                <value>
                    <fullName>Transformers</fullName>
                </value>
                <value>
                    <fullName>Weather Station</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Maintenance Items</relationshipLabel>
        <relationshipName>Maintenance_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Required__c</fullName>
        <label>Follow Up Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Performed During Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>The way it is implemented today, if you change the mapping of maintenance items to components, you not only have to change the picklist and dependent picklist on the Maintenance Item object but you also have to update the custom setting ComponentToMaintenanceItem__c.  The custom setting is what the code uses to determine what the mapping is between maintenance items and components.

The custom setting has one record for each component.  There are two fields per record - &quot;Picklist Values 1&quot; and &quot;Picklist Values 2&quot;. These two fields are used to store the name of the Maintenance Items that map to the component. The names of the Maintenance Items listed here must match the picklist values in the Item field of the Maintenance Item object exactly.  Each value is separated by a semi-colon.  Only use field &quot;Pick List Values 2&quot; if you can&apos;t fit all of the Maintenance Items names in &quot;Pick List Values 1&quot;.</description>
        <label>Item</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Component_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bird, Insect, Rodent Activity</fullName>
                </value>
                <value>
                    <fullName>Calibration verification</fullName>
                </value>
                <value>
                    <fullName>Cell temp sensor properly secured</fullName>
                </value>
                <value>
                    <fullName>Check Battery Backup</fullName>
                </value>
                <value>
                    <fullName>Combiner Electrical Testing</fullName>
                </value>
                <value>
                    <fullName>Current Transformer NETA</fullName>
                </value>
                <value>
                    <fullName>DAS Electrical Testing</fullName>
                </value>
                <value>
                    <fullName>DAS network connectivity</fullName>
                </value>
                <value>
                    <fullName>DC grounding check and inspection</fullName>
                </value>
                <value>
                    <fullName>Defective Modules</fullName>
                </value>
                <value>
                    <fullName>Disolved Gas Test</fullName>
                </value>
                <value>
                    <fullName>Electrical connections</fullName>
                </value>
                <value>
                    <fullName>Filters cleaned</fullName>
                </value>
                <value>
                    <fullName>Grease gears</fullName>
                </value>
                <value>
                    <fullName>Grease zerks</fullName>
                </value>
                <value>
                    <fullName>Ground continuity to door</fullName>
                </value>
                <value>
                    <fullName>I/V Curve Tracing</fullName>
                </value>
                <value>
                    <fullName>Inspect driveline and associated hardware for proper torque</fullName>
                </value>
                <value>
                    <fullName>Inspect Switchgear/Transformer</fullName>
                </value>
                <value>
                    <fullName>Inspect Switchgear Controls</fullName>
                </value>
                <value>
                    <fullName>Inverter Electrical Testing</fullName>
                </value>
                <value>
                    <fullName>Inverter Readings recorded</fullName>
                </value>
                <value>
                    <fullName>Inverter terminal connections - Torque &amp; Marked</fullName>
                </value>
                <value>
                    <fullName>IR Imaging</fullName>
                </value>
                <value>
                    <fullName>IR Scan &amp; Image LV/MV</fullName>
                </value>
                <value>
                    <fullName>Manufacturer Recommended Preventative Maintenance</fullName>
                </value>
                <value>
                    <fullName>Medium Voltage Switchgear NETA 7.5.4</fullName>
                </value>
                <value>
                    <fullName>Megger Testing</fullName>
                </value>
                <value>
                    <fullName>Module connector condition</fullName>
                </value>
                <value>
                    <fullName>Module soiling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Maintenance Item</label>
    <nameField>
        <displayFormat>MAINT-{0}</displayFormat>
        <label>Maintenance Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>